--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,8 +20,12 @@ body {
   font-family: AgrandirRegular, Helvetica, sans-serif;
 }
 
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* Sombrado suave */
+}
+
 .bg-image {
-  background-image: url('/background.jpg');
+  background-image: url('/background.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
