--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 .bg-image {
-  background-image: url('/background.svg');
+  background-image: url('/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
